Finished the ResourceLoader